<resources>
    <!--MainActivity-->
    <string name="app_name">Popular Movies</string>
    <string name="error_message">An error has occurred.Unable to fetch Movies , Please try again</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_top_rated">Top Rated</string>

    <string name="action_settings">Settings</string>
    <string name="sort_dialog_most_popular">Most popular</string>
    <string name="sort_dialog_top_rated">Top rated</string>


    <!--Movies Detail Activity-->
    <string name="title_activity_movies_detail">MoviesDetailActivity</string>

    <string name="overview_text">Overview</string>
    <string name="release_date_text">Release Date</string>
    <string name="user_rating_text">User Rating</string>
    <string name="trialers_heading">Trailers </string>
    <string name="reviews_heading">Reviews :</string>
    <string name="trailers_error_message">An error has occurred.Unable to fetch Trailers and Reviews for this Movie</string>
    <string name="action_favorites">Favourites</string>

    <!--Api key-->
    <string name="api_key">d1d397c8adf94068653d3465f3bf4f54</string>

</resources>
