<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tobi_ace.popularmovies.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_layout_margin">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/poster_card_height"
                    android:layout_margin="@dimen/general_layout_margin"
                    android:layout_weight=".1"
                    android:elevation="@dimen/cardview_default_elevation"
                    app:cardCornerRadius="@dimen/cardview_default_radius">

                    <ImageView
                        android:id="@+id/iv_detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/general_layout_margin"
                    android:layout_marginTop="@dimen/body_text_margin_top"
                    android:layout_weight=".1"
                    android:elevation="@dimen/cardview_default_elevation">

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/heading_text_margin_top"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/heading_text_size" />

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_movie_title"
                        android:layout_marginTop="@dimen/body_text_margin_top"
                        android:text="@string/release_date_text" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/release_date_text" />

                    <TextView
                        android:id="@+id/user_rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_release_date"
                        android:layout_marginTop="@dimen/body_text_margin_top"
                        android:text="@string/user_rating_text" />

                    <TextView
                        android:id="@+id/tv_user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_rating_text" />


                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/heading_text_margin_top"
                android:text="@string/overview_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/heading_text_size" />

            <TextView
                android:id="@+id/tv_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview_text"
                android:layout_marginTop="@dimen/body_text_margin_top"
                android:layout_margin="@dimen/general_layout_margin" />
        </RelativeLayout>


    </ScrollView>
</FrameLayout>
